--- a/index.html
+++ b/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title> VenomOpros </title>
-        <link rel="stylesheet" href="./styles.css">
-        <meta charset="UTF-8" lang="ru">
-    </head>
-    <body>
-        <div class="container"> 
-            <p id="start"> Start </p>
-            <div class="question1">
-                <p id="qp1"> Вопрос 1 </p>
-                <button id="qbtn1"> Ответить 1 </button>
-                <br>
-                <button id="qbtn2"> Ответить 2 </button>
-                <br>
-                <p id="verno" style="display: none;"> Верно! </p>
-            </div>
-            <div class="question2"> 
-                <p id="q2p1"> Вопрос 2 </p>
-                <button id="q2btn1"> Ответить 1 </button>
-                <br>
-                <button id="q2btn2"> Ответить 2 </button>
-                <br>
-            </div>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Викторина - Таблица лидеров</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Таблица лидеров викторины</h1>
+        
+        <div class="input-section">
+            <input type="text" id="playerName" placeholder="Имя участника" required>
+            <input type="number" id="playerScore" placeholder="Количество очков" required>
+            <button id="addScoreBtn">Добавить очки</button>
+            <button id="showResultsBtn">Подвести итоги</button>
         </div>
-        <script src="./venom.js"></script>
-    </body>
+        
+        <div class="leaderboard">
+            <h2>Текущие результаты</h2>
+            <table id="scoreTable">
+                <thead>
+                    <tr>
+                        <th>Место</th>
+                        <th>Имя</th>
+                        <th>Очки</th>
+                    </tr>
+                </thead>
+                <tbody id="scoreTableBody">
+                    <!-- Сюда будут добавляться участники -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div id="winnerModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Победитель викторины!</h2>
+            <div id="winnerInfo"></div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
